<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MLActivity"
    >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="0dp"
        android:layout_height="219dp"
        android:layout_margin="20dp"
        android:src="@drawable/python"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2_webdev">

    </ImageView>

    <TextView
        android:id="@+id/tv2_webdev"
        style="@style/tv_used"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"

        android:layout_marginEnd="25dp"
        android:text="@string/language_used"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/tv1_webdev"
        style="@style/tv_used"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/tools_used"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092">

    </TextView>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv1_webdev"
        android:layout_width="0dp"
        android:layout_height="165dp"
        android:layout_margin="20dp"
        android:padding="0dp"
        android:background="@color/white"
        android:src="@drawable/ml_ide"
        app:layout_constraintBottom_toTopOf="@+id/tv2_webdev"
        app:layout_constraintEnd_toStartOf="@+id/iv2_webdev"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv1_webdev"
        app:layout_constraintVertical_bias="0.49"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent">

    </com.google.android.material.imageview.ShapeableImageView>

    <ImageView
        android:id="@+id/iv2_webdev"
        android:layout_width="0dp"
        android:layout_height="171dp"
        android:layout_marginVertical="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:padding="20dp"
        android:src="@drawable/ml_ide_2"
        app:layout_constraintBottom_toTopOf="@+id/tv2_webdev"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toEndOf="@id/iv1_webdev"
        app:layout_constraintTop_toBottomOf="@id/tv1_webdev">

    </ImageView>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="214dp"
        android:layout_margin="20dp"
        android:src="@drawable/r_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView1"
        app:layout_constraintTop_toBottomOf="@+id/tv2_webdev"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent">

    </com.google.android.material.imageview.ShapeableImageView>


    <Button
        android:id="@+id/btnLearnMore3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/more"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv2_webdev" />

</androidx.constraintlayout.widget.ConstraintLayout>