<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center"
    tools:context=".WebdevActivity">

    <TextView
        android:id="@+id/textView1"
        style="@style/tv_used"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="77dp"
        android:text="@string/tools_used" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView style="@style/cardview">

            <ImageView
                android:id="@+id/imageide1"
                style="@style/Imageview"
                android:layout_below="@id/textView1"
                android:contentDescription="Android Studio Photo"
                android:src="@drawable/webstrom">

            </ImageView>

            <TextView
                style="@style/tv_UnderCardView"
                android:text="WebStorm">

            </TextView>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView style="@style/cardview">

            <ImageView
                android:id="@+id/imageide2"
                style="@style/Imageview"
                android:src="@drawable/vscode" />

            <TextView
                style="@style/tv_UnderCardView"
                android:text="VsCode">

            </TextView>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        style="@style/tv_used"
        android:layout_below="@id/linearLayout1"
        android:text="@string/language_used">

    </TextView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView style="@style/cardview">

            <ImageView
                style="@style/Imageview"
                android:src="@drawable/html_5">

            </ImageView>

            <TextView
                style="@style/tv_UnderCardView"
                android:text="Html">

            </TextView>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView style="@style/cardview">
            <ImageView
                style="@style/Imageview"
                android:src="@drawable/css">

            </ImageView>

            <TextView
                style="@style/tv_UnderCardView"
                android:text="CSS">

            </TextView>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView style="@style/cardview"
            android:layout_height="180dp">
            <ImageView
                style="@style/Imageview"
                android:src="@drawable/js"
                android:layout_height="150dp">

            </ImageView>

            <TextView
                style="@style/tv_UnderCardView"
                android:text="JavaScript">

            </TextView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLearnMore1"
            style="@style/btn_implicit_intent"
            android:text="@string/more">
        </Button>
    </LinearLayout>
</RelativeLayout>